# dr-fuel-predictor

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  predictor.rs
static/: app.js  index.html  styles.css
